# tvr_runtime

./: CMakeLists.txt  tvr_client.cpp  tvr_server.cpp
config/: tvr_server_config.json
inc/tvr/Common/: NetworkingSupport.h
inc/tvr/Connection/: Connection.h  ConnectionPtr.h  VrpnBasedConnection.h
inc/tvr/Server/: ConfigureServer.h  ConfigureServerFromFile.h  Server.h  ServerImpl.h  ServerPtr.h
inc/tvr/Util/: SharedPtr.h  UniquePtr.h
include/: ClientMainloop.h  ClientMainloopThread.h
include/Common/: BaseDevice.h  DeviceWrapper.h  PoserComponent.h  SystemComponent.h
include/Connection/: Connection.h  ConnectionPtr.h  VrpnBasedConnection.h
include/Server/: ConfigureServer.h  ConfigureServerFromFile.h  Server.h  ServerImpl.h  ServerPtr.h
include/Util/: SharedPtr.h  Verbosity.h
include/tvr/Client/: CreateContext.h  PureClientContext.h  RemoteHandler.h  RemoteHandlerFactory.h  TrackerRemoteFactory.h  VRPNConnectionCollection.h
include/tvr/ClientKit/: ClientKit.h  Context.h  ContextC.h  Context_decl.h  Interface.h  InterfaceCallbackC.h  Parameters.h  ParametersC.h  ServerAutoStartC.h
include/tvr/Common/: AliasProcessor.h  AlignmentPadding.h  ApplyPathNodeVisitor.h  BaseDevice.h  BaseDevicePtr.h  BaseMessageTraits.h  Buffer.h  BufferTraits.h  Buffer_fwd.h  ClientContext.h  ClientContext_fwd.h  CommonComponent.h  CommonComponent_fwd.h  CreateDevice.h  DeduplicatingFunctionWrapper.h  DeviceComponent.h  DeviceComponentPtr.h  DeviceWrapper.h  Endianness.h  GetJSONStringFromTree.h  IntegerByteSwap.h  JSONHelpers.h  JSONSerializationTags.h  MessageHandler.h  MessageRegistration.h  NetworkClassOfService.h  NetworkingSupport.h  ParseAlias.h  PathElementSerialization.h  PathElementSerializationDescriptions.h  PathElementTools.h  PathElementTypes.h  PathElementTypes_fwd.h  PathNode.h  PathNode_fwd.h  PathParseAndRetrieve.h  PathTree.h  PathTreeFull.h  PathTreeObserver.h  PathTreeObserverPtr.h  (+15 more)
include/tvr/Connection/: Connection.h  ConnectionPtr.h  VrpnBasedConnection.h
include/tvr/Server/: ConfigureServer.h  ConfigureServerFromFile.h  Server.h  ServerImpl.h  ServerPtr.h
include/tvr/TypePack/: Apply.h  ApplyList.h  Bool.h  CoerceList.h  Contains.h  Defer.h  FindFirst.h  If.h  List.h  Or.h  Quote.h  Size.h  SizeT.h  T.h  Transform.h  TypeKeyed.h  TypeKeyedMap.h
include/tvr/Util/: APIBaseC.h  AnnotationMacrosC.h  BasicTypeTraits.h  BoolC.h  ClientOpaqueTypesC.h  DefaultPort.h  Flag.h  MessageKeys.h  Microsleep.h  PortFlags.h  ReturnCodesC.h  SharedPtr.h  StdInt.h  TimeValue.h  TimeValueC.h  TimeValue_fwd.h  TreeNode.h  TreeNodeFullPath.h  TreeNode_fwd.h  TreeTraversalVisitor.h  TypeSafeId.h  UniquePtr.h  Vec2C.h  Vec3C.h  WideToUTF8.h
include/vrpn/: vrpn_Tencent.h
src/Common/: CommonComponent.cpp  CreateDevice.cpp  DeviceWrapper.cpp  NetworkingSupport.cpp  PoserComponent.cpp  SystemComponent.cpp
src/Connection/: Connection.cpp
src/Server/: ConfigureServer.cpp  Server.cpp  ServerImpl.cpp
src/tvr/: CMakeLists.txt  Macros.cmake
src/tvr/Client/: CMakeLists.txt  CreateContext.cpp  PureClientContext.cpp  RemoteHandler.cpp  RemoteHandlerfactory.cpp  TrackerRemoteFactory.cpp  VRPNConnectionCollection.cpp
src/tvr/ClientKit/: CMakeLists.txt  ContextC.cpp  InterfaceC.cpp  InterfaceCallback.cpp  ParametersC.cpp  ServerAutoStartC.cpp
src/tvr/Common/: AliasProcessor.cpp  BaseDevice.cpp  CMakeLists.txt  ClientContext.cpp  CommonComponent.cpp  CreateDevice.cpp  DeviceComponent.cpp  DeviceWrapper.cpp  MessageHandler.cpp  NetworkingSupport.cpp  ParseAlias.cpp  PathElementTools.cpp  PathElementTypes.cpp  PathNode.cpp  PathTree.cpp  PathTreeObserver.cpp  PathTreeOwner.cpp  PathTreeSerialization.cpp  RawMessageType.cpp  RawSenderType.cpp  RoutingConstants.cpp  RoutingKeys.cpp  SystemComponent.cpp  VrpnGenericServerObject.cpp
src/tvr/Connection/: CMakeLists.txt  Connection.cpp  VrpnBasedConnection.cpp
src/tvr/Server/: CMakeLists.txt  ConfigureServer.cpp  Server.cpp  ServerImpl.cpp
src/tvr/Util/: CMakeLists.txt  MessageKeys.cpp  PlatformConfig.h.in  TimeValueC.cpp
test/: CMakeLists.txt  CMakeLists.txt_boost  CMakeLists.txt_jsonparser  boosttest.cpp  catalog.json  jsonparser.cpp  test_loopback.cpp
test/cmake/: FindVRPN.cmake  Findquatlib.cmake  Version.cmake
